# adventOfCode2023

./: CMakeLists.txt  main.cpp
adventDay1/: day1.cpp  day1.h  day1Part2.cpp  day1Part2.h
adventDay2/: day2.cpp  day2.h  day2Part2.cpp  day2Part2.h
adventDay3/: day3.cpp  day3.h  day3Part2.cpp  day3Part2.h
adventDay4/: day4.cpp  day4.h
adventDay5/: day5.cpp  day5.h  day5Part2.cpp  day5Part2.h  mapRange.cpp  mapRange.h
recurces/: dataDay1.txt  day3test2.txt  test.txt
